--- a/P1-GoogleClone/index.html
+++ b/P1-GoogleClone/index.html
@@ -14,26 +14,38 @@
                 <li><a href="#">Imágenes</a></li>
                 <li class="menu-icon"></li>
                 <li>
-                    <a href=""><img src="" alt="Profile"></a>
+                    <a href=""><img src="https://lh3.googleusercontent.com/ogw/AF2bZygHLKO_rnSgAwZnL31u5NFaW4wTm4Stc6q2E-VmSH-NSf8=s64-c-mo
+                        " alt="Profile"></a>
                 </li>
             </ul>
         </nav>
     </header>
     <main>
-        <section class="main-logo">
-            <img src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png" alt="Google Logo">
-        </section>
-        <section class="main-input">
+        <main>
+            <!-- Sección del logo -->
+            <section class="main-logo">
+                <img
+                src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png"
+                alt="">
+                </section>
+            <!-- Sección del buscador -->
+            <section class="main-input">
             <div class="main-input-container">
-                <span class="search-icon"></span>
-                <input type="text" placeholder="Search Google">
-                <a class="micro-icon" href="#"></a>
+            <!-- Logo de lupa -->
+            <span class="search-icon">
+            </span>
+            <!-- Es donde el usuario escribirá lo que desea buscar -->
+            <input type="text">
+            <!-- En el micrófono se usa anchor para simular el comportamiento de un
+            enlace -->
+            <a class="micro-icon" href=""></a>
             </div>
-        </section>
-        <section class="main-buttons">
+            </section>
+            <!-- Sección de botones -->
+            <section class="main-buttons">
             <div><button>Buscar con Google</button></div>
             <div><button>Voy a tener suerte</button></div>
-        </section>
-    </main>
+            </section>
+            </main>
 </body>
 </html>
